# CPlusPlusThings

./: CMakeLists.txt
c++2.0/c++11/variadic/: 1.cpp
